# ShipMC

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: Launcher.cpp  Ship.hpp
src/main/: Main.cpp  Main.hpp
src/main/proxy/: Proxy.cpp  Proxy.hpp
src/main/proxy/client/: Client.cpp  Client.hpp
src/main/proxy/handlers/: ConnectPacketHandler.cpp  HandshakePacketHandler.cpp  PostAuthPacketHandler.cpp  PreAuthPacketHandler.cpp  ProxyPacketHandler.hpp  StatusPacketHandler.cpp
src/network/: Connection.cpp  Connection.hpp  SocketAddress.hpp
src/network/connector/: Connector.hpp  EpollConnector.cpp  UnixConnector.cpp
src/network/eventloop/: AbstractEventLoop.cpp  EpollEventLoop.cpp  EventLoop.hpp  KqueueEventLoop.cpp  NetworkEventLoop.hpp
src/network/listener/: EpollListener.cpp  KqueueListener.cpp  Listener.hpp
src/network/pipe/: CompressionPipe.cpp  FramedByteBytePipe.cpp  FramedBytePacketPipe.cpp  FramedPipe.hpp  MinecraftFramedBytePacketPipe.cpp  MinecraftPipe.hpp  Pipe.hpp
src/network/pipe/minecraft/: CompressionPipe.cpp  MinecraftFramedBytePacketPipe.cpp  MinecraftPipe.hpp
src/network/readwritecloser/: ReadWriteCloser.hpp  UnixReadWriteCloser.cpp
src/protocol/: ByteBuffer.cpp  ByteCounter.cpp  MinecraftProtocol.cpp  MinecraftProtocol.hpp  Protocol.hpp  ProtocolUtils.cpp  ProtocolUtils.hpp  ProtocolVersion.cpp
src/protocol/data/: ItemStack.cpp  ItemStack.hpp
src/protocol/data/client/: LoginClient.cpp  LoginClient.hpp  Player.cpp  Player.hpp
src/protocol/data/entity/: AbstractArrow.hpp  AbstractFish.hpp  AbstractGolem.hpp  AbstractHorse.hpp  AbstractIllager.hpp  AbstractMinecart.hpp  AbstractMinecartContainer.hpp  AbstractSkeleton.hpp  AbstractVillager.hpp  AgeableMob.hpp  AmbientCreature.hpp  Animal.hpp  AreaEffectCloud.hpp  ArmorStand.hpp  Arrow.hpp  Axolotl.hpp  BasePiglin.hpp  Bat.hpp  Bee.hpp  Blaze.hpp  Boat.hpp  Cat.hpp  ChestBoat.hpp  ChestedHorse.hpp  Chicken.hpp  Cod.hpp  Cow.hpp  Creeper.hpp  Dolphin.hpp  Donkey.hpp  DragonFireball.hpp  Drowned.hpp  ElderGuardian.hpp  EndCrystal.hpp  EnderDragon.hpp  Enderman.hpp  Endermite.hpp  Entity.hpp  Evoker.hpp  EvokerFangs.hpp  (+98 more)
src/protocol/data/nbt/: ByteArrayTag.cpp  ByteTag.cpp  CompoundTag.cpp  DoubleTag.cpp  EndTag.cpp  FloatTag.cpp  IntArrayTag.cpp  IntTag.cpp  ListTag.cpp  LongArrayTag.cpp  LongTag.cpp  NBT.cpp  NBT.hpp  ShortTag.cpp  StringTag.cpp
src/protocol/handlers/: AbstractPacketHandler.cpp  PacketHandler.cpp  PacketHandler.hpp
src/protocol/packets/: Packet.hpp
src/protocol/registry/: BuiltInPacketRegistry.cpp  BuiltInPacketRegistry.hpp  ConstructorRegistry.hpp  DataTypeRegistry.hpp  EnumRegistry.hpp  PacketRegistry.cpp  PacketRegistry.hpp  VersionRegistry.cpp  VersionRegistry.hpp  VersionedRegistry.cpp  VersionedRegistry.hpp
src/utils/: ShipUtils.cpp  ShipUtils.hpp
src/utils/exceptions/: ErrnoException.hpp  Errorable.hpp  Exception.hpp  InvalidArgumentException.hpp
src/utils/ordinal/: MinecraftOrdinalRegistry.cpp  MinecraftOrdinalRegistry.hpp  OrdinalRegistry.cpp  OrdinalRegistry.hpp  OrdinalVector.hpp
src/utils/threads/: EventLoop.cpp  EventLoop.hpp  ThreadPool.cpp  ThreadPool.hpp
(+460 files in other folders)
